Bug 971933 - Calculate the desired height for the FieldSetFrame correctly.  r=roc